# meta-aws-ci

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dependabot.yml
.github/: CODEOWNERS
.github/workflows/: check-yaml.yml  report-issues.yml  report-security.yml  scrape-recipes.yml  test-cdk.yml
auto-upgrader/: README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py
auto-upgrader/tests/: test_proc.py
auto-upgrader/upgrader/: __init__.py  github.py  proc.py  updates.py
buildspec/: ci_image.yml
cdk/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
ci_image/: Dockerfile
cloudformation/: ci_image.yml  ci_layer.yml  ci_network.yml
core/: README.md
demos-pipeline/: .eslintrc.js  .gitignore  README.md  cdk.json  package-lock.json  package.json  readme.md  tsconfig.json
docs/: DASHBOARD.md  ci_setup.md  index.html  issues.html  new_release_checklist.md  next_to_release_branch.md  ptest.md  recipe-versions-kirkstone.html  recipe-versions-master.html  recipe-versions-scarthgap.html  recipe-versions-whinlatter.html  recipe-versions.html  security.html  style.css
ff-merge/: README.md  meta-aws-ffmerge  meta-aws-ffmerge-all  release.sh
meta-aws-tests/: README.md  meta-aws-tests.sh
ref/: README.md
release-tests/: README.md  meta-aws-release-tests.sh
scripts/: report_issues.py  report_security.py  requirements.txt  scrape_meta_aws.py  version_pins.json
workshop/: 01_introduction.md  03_03_dev_experience.md  03_04_auto_testing.md  03_modules.md  04_conclusion.md  README.md  buildspec.yml  config.toml
(+115 files in other folders)
